--- a/CSS Grid(Day-3)/Eg3.html
+++ b/CSS Grid(Day-3)/Eg3.html
@@ -22,7 +22,18 @@
             <img src="/images/cat2.jpg" alt="">
         </div>
         <div class="item cont-1">
-            <img src="/images/jagan1.jpg" alt="">
+            <form action="#">
+                <p>Gender</p>
+                <input type="radio" name="gender" checked value="male">Male<br>
+                <input type="radio" name="gender" value="female">Female<br>
+                <input type="radio" name="gender" value="others">Others<br>
+        
+                <p>Courses Done:</p>
+                <input type="checkbox" name="course" value="c++">C++<br>
+                <input type="checkbox" name="course" value="java">Java<br>
+                <input type="checkbox" name="course" value="python">python<br>
+                <input type="submit">
+            </form>
         </div>
         <div class="item cont-2">Content-2</div>
         <div class="item cont-3">Content-3</div>
