--- a/CSS-LEVEL3/FlexBox/index.html
+++ b/CSS-LEVEL3/FlexBox/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="box">box-1</div>
-        <div class="box">box-2</div>
-        <div class="box">box-3</div>
-        <div class="box">box-4</div>
+        <div class="box" id="box-1">box-1</div>
+        <div class="box" id="box-2">box-2</div>
+        <div class="box" id="box-3">box-3</div>
+        <div class="box" id="box-4">box-4</div>
     </div>
 
 </body>
